--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 
   <!-- Actions Section -->
   <div class="flex items-center space-x-4 text-lg">
+    <button id="signupBtn" onclick="showSignupModal()" class="mt-4 bg-red-600 text-white px-4 py-2 rounded w-full">🍕 Create Account</button>
+
     <!-- Location Icon -->
     <div class="flex items-center gap-1">
       <i class="fas fa-map-marker-alt text-yellow-300"></i>
